--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -36,6 +37,7 @@
     "emoji-picker-react": "^4.9.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.364.0",
+    "nanoid": "^5.0.7",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
